# RAG-basico

./: .gitignore  app.py  pyproject.toml  rag_system.py  test.py
utils/: document_processor.py
